--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 
 @layer components {
     .link-icon {
-        @apply text-white text-3xl;
+        @apply text-white text-2xl sm:text-3xl;
     }
 }
